manifests/db_deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-postgres
spec:
  serviceName: todo-postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: todo-postgres
  template:
    metadata:
      labels:
        app: todo-postgres
    spec:
      containers:
        - name: todo-postgres
          image: postgres
          ports:
            - name: web
              containerPort: 5432
          volumeMounts:
            - name: todo-postgres-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: todo-postgres-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: todo-postgres-svc
  labels:
    app: todo-backend 
spec:
  ports:
  - port: 5432
    name: web
  clusterIP: None
  selector:
    app: todo-postgres

# postgresql://postgres:postgres@todo-postgres-svc:5432/postgres
